--- a/v2/monitor/todo
+++ b/v2/monitor/todo
@@ -1,4 +1,6 @@
 short:
-refactor monitor endpoints from v1
+license endpoints
+medium:
+good info endpoints
 long:
 generate from schema... find schema?
